<resources>
    <string name="app_name">Project X</string>
    <string name="projectX">Project X</string>
    <string name="termsAndPolicies"><u>Terms &amp; Policies</u>.</string>
    <string name="grayCode">\u00A9 2018 Gray Code.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bu">bu</string>

    <string name="button_continue">Continue</string>
    <string name="button_submit">Submit</string>

    //welcome_activity
    <string name="text_welcome">Welcome!</string>
    <string name="text_app_description">An Unique way to meet and greet your x app friends instantly.</string>
    <string name="text_app_terms_and_policies">By tapping \"Continue\" you agree to our \n Terms and Policies.</string>

    //register screen activity
    <string name="text_app_enter_your_phone_number">Enter your phone number</string>
    <string name="text_app_description2">Make sure you can receive calls and sms \n to this number so that we can send you a code.</string>

    //verification activity
    <string name="text_not_logged_in">You are not logged in !</string>


    <string name="text_edit">Edit</string>
    <string name="text_current_location">(Current Location)</string>
    <string name="text_current_location2">Current Location:</string>
    <string name="text_birth_place">Birthplace</string>
    <string name="text_birth_place2">Birth Place:</string>
    <string name="text_full_name">Full Name:</string>
    <string name="text_age">Age:</string>
    <string name="text_dob">Date of Birth (D.O.B):</string>
    <string name="text_dob2">Date of Birth:</string>
    <string name="text_date_select">select a date...</string>
    <string name="text_gender">Gender:</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_other">Other</string>
    <string name="text_status">Status:</string>
    <string name="text_education">Education:</string>
    <string name="text_work">Work:</string>
    <string name="text_blood_type">Blood Type:</string>
    <string name="text_additional_contacts">Additional Contacts:</string>
    <string name="text_enter_your_details">Enter Your Credentials</string>
    <string name="text_first_name">First Name:</string>
    <string name="text_middle_name">Middle Name:</string>
    <string name="text_last_name">Last Name:</string>
    <string name="text_designation">Designation:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_people_fragment">Hello people fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_messages_fragment">Hello message fragment</string>

    <string name="hello_notifications_fragment">Hello notifications fragment</string>

    <string name="hello_profile_fragment">Hello profile fragment</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="hint_at_phonenumber_edittext">Number Without Dialcode </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
