<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/projectX"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/projectX"
        android:textSize="20sp"/>
        <!--android:textStyle="bold" />-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:paddingBottom="35dp"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/text_app_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:text='@string/text_app_terms_and_policies'
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/termsAndPolicies"
        android:textAlignment="center" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/button_custom_text_box"
        android:text="Continue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""/>

</LinearLayout>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingBottom="100dp"-->
        <!--android:text="" />-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:text="@string/grayCode"
        android:paddingTop="85dp"/>

</LinearLayout>