<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/text_enter_your_details"
          android:textSize="@dimen/extraLargeTextSize"
          android:gravity="center"
          android:textColor="#292929"
          android:fontFamily="Roboto"
          android:paddingBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:text="@string/text_first_name"
                android:gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    style="@style/fourth_fragment_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name"
                    android:hint="first name"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:text="@string/text_middle_name"
                android:gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    style="@style/fourth_fragment_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/middle_name"
                    android:hint="middle name"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:text="@string/text_last_name"
                android:gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    style="@style/fourth_fragment_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name"
                    android:hint="last name"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight=".32"
                android:text="@string/text_dob2"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/dateView"
                style="@style/fourth_fragment_text_header"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".68"
                android:hint="@string/text_date_select"
                android:textColorHint="@color/colorAccent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:text="@string/text_age"
                android:gravity="center_vertical"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/age"
                    style="@style/fourth_fragment_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="your age"
                    android:inputType="none"
                    android:editable="false"
                    android:textIsSelectable="false"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:text="@string/text_birth_place2"
                android:gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/birthPlace"
                    style="@style/fourth_fragment_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="place of birth"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:text="@string/text_designation"
                android:gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/designation"
                    style="@style/fourth_fragment_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="current location"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/text_gender"
                android:gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".68">
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:text="@string/text_male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/text_female" />

                    <RadioButton
                        android:id="@+id/others"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/text_other" />

                </RadioGroup>
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"
                android:gravity="center_vertical"
                android:text="@string/text_status" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/fourth_fragment_text_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".68">
                android:gravity="center">

            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/text_education"
                android:gravity="center_vertical"/>

            <Spinner
                android:id="@+id/spinner2"
                style="@style/fourth_fragment_text_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                android:gravity="center">

            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="1">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/text_blood_type"
                android:gravity="center_vertical"/>

            <Spinner
                android:id="@+id/spinner3"
                style="@style/fourth_fragment_text_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                android:gravity="center">

            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/text_work"
                android:gravity="center_vertical"/>

            <Spinner
                android:id="@+id/spinner4"
                style="@style/fourth_fragment_text_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                android:gravity="center">

            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingBottom="10dp">

            <TextView
                style="@style/edit_description_text_header"
                android:layout_height="match_parent"
                android:layout_weight=".32"

                android:text="@string/text_additional_contacts"
                android:gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".68">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/additonalContacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="other contacts"
                    android:gravity="center"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:layout_gravity="center"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:fontFamily="serif-monospace"
            android:textColor="@android:color/white"
            android:background="@drawable/button_custom_text_box"
            android:layout_gravity="center"
            />

    </LinearLayout>
</ScrollView>

    <!--android:inputType="none"-->
    <!--android:textIsSelectable="true"-->